--- a/edit.html
+++ b/edit.html
@@ -7,7 +7,7 @@
 {% block content %}
     <h1>Edit Flower</h1>
 
-    <form action="{{ url_for('update', flower_id=results[0].id) }}" method="post">
+    <form action="{{ url_for('update', flower_id=results[0].id) }}" methods="post">
         <div class="mb-3">
             <label for="flower_name" class="form-label">Flower Name</label>
             <input type="text" class="form-control" name="flower_name" id="flower_name" placeholder="your flower name" value="{{ results[0].flower_name }}" required>
